--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -184,9 +184,8 @@ summary:not(#starlight__on-this-page--mobile) {
     width: auto !important;
   }
   [class^="right-sidebar"] {
-    width: 25vw;
+    min-width: 20vw;
     max-width: 300px;
-    pointer-events: none;
     > .sl-container {
       width: calc(25vw - (2 * var(--sidebar-pad-x)));
       max-width: calc(300px - (2 * var(--sidebar-pad-x)));
@@ -194,6 +193,10 @@ summary:not(#starlight__on-this-page--mobile) {
   }
   .main-frame:not(:has(> div > aside[class*="print:hidden"])) {
     --sl-content-inline-start: 20vw;
+  }
+  .content-panel > .sl-container {
+    max-width: unset !important;
+    margin-inline: 0 !important;
   }
 }
 @media (min-width: 50rem) {
@@ -219,7 +222,7 @@ summary:not(#starlight__on-this-page--mobile) {
     border-inline-end: none;
   }
   .main-frame {
-    cursor: pointer;
+    cursor:default;
     padding-inline-start: 0;
   }
   body > div:has(> nav) > div .main-frame {
