some other more changes
githubstats: fix label
path-utils: use better b64 and use mountpoint on unix
utils: new decorator: classproperty, used ONCE
nav-buttons: add failsafe
path-input: no use assert
file-search + zoxide: some slight changes to rendering
zoxide: move creation of options to thread
constants: use classproperty and literal

--- a/docs/src/components/GithubStats.astro
+++ b/docs/src/components/GithubStats.astro
@@ -32,7 +32,7 @@ try {
 
 <div class="social-wrapper">
   <div class="github-stats">
-    <a href={`https://github.com/${repoOwner}/${repoName}/network/members`} class="github-stat" title="Forks">
+    <a href={`https://github.com/${repoOwner}/${repoName}/network/members`} class="github-stat" title="Release">
       <span>󰓼</span>
       <span>󰓹</span>
       <span>{release_tag || "v0.5.0"}</span>
