--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -54,6 +54,7 @@ code {
   --sl-color-text-invert: var(--sl-color-black);
   --sl-color-bg-sidebar: hsl(from var(--sl-color-gray-5) h s l / 50%);
   --sl-color-bg-nav: hsl(from var(--sl-color-gray-5) h s l / 50%);
+  --table-border-color: color-mix(in oklab, var(--sl-color-accent) 75%, var(--sl-color-black));
 }
 /* Light mode colors. */
 :root[data-theme="light"] {
@@ -82,6 +83,7 @@ code {
   --sl-color-text-invert: var(--sl-color-black);
   --sl-color-bg-sidebar: hsl(from var(--sl-color-gray-6) h s l / 50%);
   --sl-color-bg-nav: hsl(from var(--sl-color-gray-6) h s l / 50%);
+  --table-border-color: color-mix(in oklab, var(--sl-color-accent) 75%, var(--sl-color-white));
 }
 html {
   background: var(--sl-color-white);
@@ -125,18 +127,24 @@ html svg * {
   text-transform: initial !important;
 }
 th {
-  position: sticky
+  top: 0;
+  position: sticky;
 }
-th,
-td {
-  border: 2px solid var(--sl-color-accent);
+th {
+  border: 2px solid var(--table-border-color);
   padding: 10px;
-  text-align: center
+  text-align: center;
+}
+td {
+  border: 0.5px solid var(--table-border-color);
+  padding: 10px;
+  text-align: center;
 }
 table {
-  border: 2px solid var(--sl-color-accent);
+  border: 2px solid var(--table-border-color);
   overscroll-behavior-x: contain;
   width: fit-content;
+  border-radius: 5px;
 }
 svg.rich-terminal * {
   font-family: "CaskaydiaCoveNFM" !important;
