--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -218,6 +218,9 @@ img {
   border: 2.5px solid var(--sl-color-accent);
   border-radius: 5px;
 }
+.sidebar-content {
+  padding: 1rem 1rem 0 0.5rem
+}
 @media (min-width: 72rem) {
   .main-pane {
     margin: auto;
